<resources>
    <string name="app_name">Calculator</string>
    <string name="addFragment">+</string>
    <string name="clear">Очистить</string>
    <string name="calculate">Рассчитать</string>
    <string name="expenses">Расходы:</string>
    <string name="monthlyRent">Месячная аренда:</string>
    <string name="costObject">Стоимость объекта:</string>
    <string name="paybackperiod">Окупаемость:</string>
    <string name="netProfit">Годовой доход:</string>
    <string name="clear_all_data">Очистить всё</string>
    <string name="hint_edit_text_expenses">0</string>
</resources>