<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textViewPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:maxWidth="110dp"
        android:maxHeight="70dp"
        android:maxLines="1"
        android:text="0.0%"
        android:textSize="60sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvInfoNetProfit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginStart="5dp"
        android:autoSizeMinTextSize="7sp"
        android:autoSizeTextType="uniform"
        android:maxLines="1"
        android:text="@string/netProfit"
        app:layout_constraintBottom_toTopOf="@+id/tvInfoPaybackPeriod"
        app:layout_constraintEnd_toStartOf="@+id/tvNetProfit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewPercent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNetProfit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="1dp"
        android:autoSizeMinTextSize="7sp"
        android:autoSizeTextType="uniform"
        android:maxLines="2"
        app:layout_constraintBottom_toTopOf="@+id/tvPaybackPeriod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvInfoNetProfit"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView

        android:id="@+id/tvInfoPaybackPeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:autoSizeMinTextSize="7sp"
        android:autoSizeTextType="uniform"
        android:maxLines="1"
        android:text="@string/paybackperiod"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/tvPaybackPeriod"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewPercent"
        app:layout_constraintTop_toBottomOf="@+id/tvInfoNetProfit" />

    <TextView
        android:id="@+id/tvPaybackPeriod"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="1dp"
        android:autoSizeMinTextSize="7sp"
        android:autoSizeTextType="uniform"
        android:maxLines="2"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvInfoPaybackPeriod"
        app:layout_constraintTop_toBottomOf="@+id/tvNetProfit" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPercent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:text="@string/costObject"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextCostObject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:imeOptions="flagNoExtractUi|actionNext"
            android:inputType="numberDecimal"
            android:minHeight="48dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:text="@string/monthlyRent"
            android:textSize="20sp" />
        <EditText

            android:id="@+id/editTextMonthlyRent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:imeOptions="flagNoExtractUi|actionNext"
            android:inputType="numberDecimal"
            android:minHeight="48dp"

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:text="@string/expenses"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextExpenses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_edit_text_expenses"
            android:imeOptions="flagNoExtractUi|actionGo"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textAlignment="center" />


    </LinearLayout>


    <Button
        android:id="@+id/btnAddFragment"
        android:layout_width="48dp"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="2dp"

        app:layout_constraintEnd_toStartOf="@id/buttonClearData"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />


    <Button
        android:id="@+id/buttonClearData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="2dp"
        android:text="@string/clear"
        app:layout_constraintEnd_toStartOf="@+id/buttonCalculate"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Button

        android:id="@+id/buttonCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>
    
    